--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,10 @@ header {
   border: none;
   background-color: #ffffff00;
   text-transform: uppercase;
+  cursor: pointer;
+}
+.header-button:hover {
+  color: #e500a0;
 }
 
 /*********************************************************** Навигация *************************************************************/
@@ -144,6 +148,7 @@ header {
 
 .our_story {
   margin: 0 auto;
+  margin-bottom: 118px;
 }
 .story_text {
   margin: 0 auto;
@@ -235,4 +240,69 @@ header {
   padding-top: 16px;
   padding-left: 14px;
   padding-right: 12px;
+}
+
+/*********************************************************** Our Capabilities *************************************************************/
+
+.Our-Capabilities {
+}
+.Box__Our-Capabilities {
+  display: flex;
+  gap: 155px;
+}
+.Left-Our-Capabilities {
+}
+
+.h2-capabilities {
+  color: #48555b;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 2.306px;
+  text-transform: uppercase;
+  margin: 0;
+}
+.line-capabilities {
+  width: 50px;
+  height: 2px;
+  background-color: #00a4e5;
+  display: block;
+  margin-top: 9px;
+}
+.Right-Our-Capabilities {
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
+}
+.p-Our-Capabilities {
+  color: #48555b;
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 19px; /* 172.727% */
+  letter-spacing: 0.2px;
+  margin: 0;
+  width: 405.404px;
+  height: 38px;
+  gap: 20px;
+}
+.button-Our-Capabilities {
+  color: #fff;
+  text-align: center;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 0.2px;
+  text-transform: uppercase;
+  background-color: #00a4e5;
+  border: none;
+  width: 150px;
+  height: 40px;
+  padding: 0;
+  cursor: pointer;
+}
+.button-Our-Capabilities:hover {
+  background-color: #e500a0;
 }
