--- a/css/style.css
+++ b/css/style.css
@@ -357,7 +357,7 @@ header {
   background-repeat: no-repeat;
   background-position: center;
   min-width: 1440px;
-  /* background-size: 1550px 769px; */
+  background-size: 1550px 501px;
   height: 498.24px;
   display: flex;
   flex-direction: column;
