--- a/css/style.css
+++ b/css/style.css
@@ -564,6 +564,15 @@ select:focus {
   margin: 0;
   margin-left: 37px;
 }
+.nav-links-1 li a:hover {
+  color: #e500a0;
+}
+.nav-links-2 li a:hover {
+  color: #e500a0;
+}
+.nav-links-3 li a:hover {
+  color: #e500a0;
+}
 .contact_us {
   display: flex;
 
